grammer.txt
Foundation  : Statement | ControlFlowStatement

ControlFlowStatement : 'return' LogicalOr? ';'
                     | 'break' ';'
                     | 'continue' ';'
                     | 'for' Identifier 'in' Expression Scope
                     | 'while' Equality Scope
                     | 'if' Equality Scope 
                     | 'elif' Equality Scope
                     | 'else' Scope
                     | 'for' Identifier 'in' Expression Scope

Statement  : [Identifier ('=' | '+=' | '-=' | '*=' | '/=')] LogicalOr ';'

LogicalOr  : LogicalAnd ['or' LogicalAnd]*

LogicalAnd : Equality ['and' Equality]*

Equality   : Relation [ ('==' | '!=') Relation ]

Relation   : Expression [ ( '<' | '<=' | '>' | '>=' ) Expression ]

Expression : Term [ ('+' | '-') Term ]*

Term       : Factor [ ('*' | '/' | '//' | '%') Factor ]*

Factor     : [ ('+' | '-') ]? Power

Power      : LogicalNot [ ('^' | '**') Factor ]?

LogicalNot : ['not' | '!']* Atom

Primary    : Atom | ('(' LogicalOr ')') | Scope

Atom       : Identifier | Number | Boolean | String

Number     : Integer | Float

Identifier : (a-zA-Z_)[a-zA-Z_0-9]*

Boolean    : true | false

String     : '"' [^"]* '"'

Integer    : [0-9]+

Float      : [0-9]+ '.' [0-9]+

Scope      : '{' Foundation+ '}'

Add builtin functions, lists, break, continue, for, in, return,
const, int, double, float, bool, String, def, import, null, input

binary int not
